add ui for main screen
- ui for main screen
- item layout for forecast list
- consume main view model and fetch daily forecast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Weather Forecast</string>
+    <string name="btn_get_weather">Get Weather</string>
+    <string name="search_forecast_hint">Input your city name</string>
 </resources>
