render forecast data on main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Weather Forecast</string>
     <string name="btn_get_weather">Get Weather</string>
     <string name="search_forecast_hint">Input your city name</string>
+    <string name="label_date_with_value">Date: %s</string>
+    <string name="label_avg_temperature_with_value">Average temperature: %s</string>
+    <string name="label_pressure_with_value">Pressure: %d</string>
+    <string name="label_humidity_with_value">Humidity: %s</string>
+    <string name="label_description_with_value">Description: %s</string>
 </resources>
